[package]
name = "ktimetracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "cargo"] }
dbus = "0.9.9"
env_logger = "0.11.8"
log = { version = "0.4.28", features = ["std"] }
wayrs-client = "1.3.1"
wayrs-protocols = { version = "0.14.11", features = ["ext-idle-notify-v1"] }
wayrs-utils = { version = "0.17.2", features = ["seats"] }
