[package]
name = "ktimetracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "cargo"] }
env_logger = "0.11.8"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
log = { version = "0.4.28", features = ["std"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
wayrs-client = { version = "1.3.1", features = ["tokio"] }
wayrs-protocols = { version = "0.14.11", features = ["ext-idle-notify-v1"] }
wayrs-utils = { version = "0.17.2", features = ["seats"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
